# vimwiki-task

./: .gitignore  Cargo.toml  README.md
config/: config.yaml  doc_template.md  template.md
src/: bootstrap.rs  config.rs  file_manager.rs  file_structure.rs  main.rs  options.rs  options.yaml  template.rs  utils.rs
