[package]
name = "vimwiki-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.34.0", features = ["yaml"] }
colour = "0.6.0"
chrono = { version = "0.4.19", features = ["unstable-locales"]}
yaml-rust = "0.4.5"
regex = "1"
dirs = "4.0"